integration_tests/codegen_fail/fail/object/derive_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
   --> fail/object/derive_field_non_output_return_type.rs:8:10
    |
8   | #[derive(GraphQLObject)]
    |          ^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
    |
note: required by `juniper::marker::IsOutputType::mark`
   --> $WORKSPACE/juniper/src/types/marker.rs
    |
    |     fn mark() {}
    |     ^^^^^^^^^
    = note: this error originates in the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)
